[gd_scene load_steps=5 format=2]

[ext_resource path="res://prefabs/ui/ElemSquareUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game/Element.gd" type="Script" id=2]
[ext_resource path="res://fonts/presets/ElementName.tres" type="DynamicFont" id=3]

[sub_resource type="StreamTexture" id=1]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/elem_square.png-d784ec3259573ad434c3c446a25e0f2b.stex"

[node name="Element" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 50, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElemSquare" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
texture = SubResource( 1 )
use_gray_texture = true

[node name="ElemName" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -5
text = "Energy drink"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
